# cv-course-work

./: .dockerignore  Dockerfile  README.md  READMY.md  Taskfile.yml  compose.yml  pyproject.toml
app/: main.py  services.py
