[tool.poetry]
name = "cv-course-work"
version = "0.1.0"
description = ""
authors = ["Владимир Союзов <soyuzovva@intech.rshb.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytesseract = "^0.3.13"
opencv-python = "^4.10.0.84"
pillow = "^11.0.0"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
